Files nun probegelesen

--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Donations.tex
@@ -6,8 +6,8 @@
 \begin{document}
 \subsection{Donations}
 Donations stellen eine Möglichkeit für Benutzer dar den Entwicklern einer App Geld zu spenden, um Ihren Dank auszudrücken oder die Entwicklung der App zu unterstützen.
-Es gibt viele Möglichkeiten um die Implementierung von Donations zu unterstützen.\newline
-Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen die keinen Gegenwert liefern oder das Erstellen einer kostenpflichtigen App die keine Funktionen beinhaltet und denselben Namen wie die Gratis App und einen Suffix wie z.B.: Donation trägt.
+Es gibt viele Möglichkeiten, um die Implementierung von Donations zu unterstützen.\newline
+Zu den populärsten Formen zählen Dienste wie PayPal, Flattr, das Implementieren von In-App-Käufen, die keinen Gegenwert liefern, oder das Erstellen einer kostenpflichtigen App, die keine Funktionen beinhaltet und denselben Namen wie die Gratis App aber einen Suffix wie z.B.: Donation trägt.
 
 
 \subsubsection{Flattr}
@@ -20,12 +20,12 @@ Flattr can be used as a complement to accepting donations. Or to having advertis
 \end{quote}[Flattr \cite{flattr}]
 
 \ \\
-Flattr eignet sich gut um Spenden durchzuführen, da dieses Vorgehensmodell Entwickler direkt unterstützt anstatt Geld für eine bestimmte Leistung entgegen zu nehmen. 
+Flattr eignet sich gut um Spenden durchzuführen, da dieses Vorgehensmodell Entwickler direkt unterstützt, anstatt Geld für eine bestimmte Leistung entgegen zu nehmen. 
 
 \newpage
 \subsubsection{PayPal}
-PayPal und deren Mobile Payment Libraries unterstützen die einfache Implementierung eines ''Pay with Paypal''-Buttons über den Käufe mittels eines PayPal-Account durchgeführt werden können.
-Da wir unsere App aber in den Google Play Store stellen wollen stehen wir vor dem Problem, dass die Einbindung von Donations in Apps, die über den Play Store vertrieben werden, nur sehr vage in den Google Play-Programmrichtlinien für Entwickler beschrieben sind.
+PayPal und deren Mobile Payment Libraries unterstützen die einfache Implementierung eines ''Pay with Paypal''-Buttons, über den Käufe mittels eines PayPal-Accounts durchgeführt werden können.
+Da wir unsere App aber in den Google Play Store stellen wollen, stehen wir vor dem Problem, dass die Einbindung von Donations in Apps, die über den Play Store vertrieben werden, nur sehr vage in den Google Play-Programmrichtlinien für Entwickler beschrieben sind.
 
 \begin{quote}
 Käufe im Store: Entwickler, die Gebühren für Apps und Downloads bei Google Play erheben, müssen dies über das Zahlungssystem von Google Play tun.
@@ -41,7 +41,7 @@ Nach diesem Modell werden In-App-Käufe zur Verfügung gestellt, die dem Benutze
 Die In-App-Käufe werden im Kapitel Freemium näher beschrieben.
 \ \\
 \subsubsection{Zweite kostenpflichtige App}
-Es besteht die Möglichkeit eine zweite App zu erstellen die selbst keine Funktionen beinhaltet und denselben Namen wie die Gratis App + einen Suffix wie z.B.: (Donation) trägt.
-In diesem Falle kann ein zufriedener Benutzer diese zweite App kaufen und so den Entwickler der Gratis App unterstützen.
+Es besteht die Möglichkeit eine zweite App zu erstellen, die selbst keine Funktionen beinhaltet und denselben Namen wie die Gratis App aber einen Suffix wie z.B.: (Donation) trägt.
+In diesem Fall kann ein zufriedener Benutzer diese zweite App kaufen und so die Entwickler der Gratis App unterstützen.
 
 \end{document}
