--- a/FIPLY/Dokumente/FIPLY Latex/denkmayr_Freemium.tex
+++ b/FIPLY/Dokumente/FIPLY Latex/denkmayr_Freemium.tex
@@ -5,25 +5,25 @@
 
 \begin{document}
 \subsection{Freemium}
-Freemium ist ein Konzept, das das Verdienen von Geld über In-App-Käufe als primäre Einkommensquelle vorsieht.
+Freemium ist ein Konzept, welches das Verdienen von Geld über In-App-Käufe als primäre Einkommensquelle vorsieht.
 Diese In-App-Käufe erfolgen über den Google Play Store. 
 Dazu werden In-App-Products auf der Google Play Store Website angelegt.
 Diesen Items wird eine Id, ein Name, ein Preis und einer von 3 Itemtypen zugeteilt. \newline
 [Android Developers \cite{adAdministerBilling}, Youtube \cite{yFreemium}]
 
 \subsubsection{Consumable Items}
-Consumable Items sind Artikel die benutzt werden können und nachgekauft werden können. 
+Consumable Items sind Artikel, die benutzt und nachgekauft werden können. 
 Beispiele für Consumable Items sind zum Beispiel Tankfüllungen in einem Spiel.
 Eine Tankfüllung kann nur ein einziges Mal und nur auf einem Gerät verwendet werden. Sollte man noch eine Tankfüllung brauchen muss man das Consumable Item noch einmal kaufen. 
 
 \subsubsection{Non-Consumable Items} 
-Non-Consumable Items sind Artikel die einmal gekauft werden und dem Benutzer erhalten bleiben.
+Non-Consumable Items sind Artikel, die einmal gekauft werden und dem Benutzer erhalten bleiben.
 Ein Beispiel für ein Non-Consumable Item ist zum Beispiel eine Upgrade für ein Auto in einem Spiel.
-Dieses Upgrade bleibt erhalten und ist auch auf anderen Geräten verfügbar solange man mit demselben Google Play Account eingeloggt ist. 
+Dieses Upgrade bleibt erhalten und ist auch auf anderen Geräten verfügbar, solange man mit demselben Google Play Account eingeloggt ist. 
 
 \subsubsection{Subscriptions}
 Bei Subscriptions wird regelmäßig eine Gebühr entrichtet.
-Diese verlängern sich automatisch und müssen manuell storniert werden falls man die dadurch bereitgestellten Services nicht mehr benötigt.
+Diese verlängern sich automatisch und müssen manuell storniert werden, falls man die dadurch bereitgestellten Services, nicht mehr benötigt.
 Als Entwickler kann man definieren wie oft eine Gebühr entrichtet werden muss und kann auch eine kostenlose Probezeit zur Verfügung stellen. 
-Ein Beispiel für eine Subscription ist ein Upgrade das unendlich viele Tankfülllungen in einem Spiel zur Verfügung stellt solange diese aktiv ist.
+Ein Beispiel für eine Subscription ist ein Upgrade das unendlich viele Tankfülllungen in einem Spiel zur Verfügung stellt, solange diese aktiv ist.
 \end{document}
